update codd of the file-positions matching

--- a/SPDM_5FU.ipynb
+++ b/SPDM_5FU.ipynb
@@ -217,20 +217,15 @@
     "        \n",
     "        # Extract a key name for the output dictionary from the file path\n",
     "        match = re.search(pattern, position_dir)\n",
-    "        if match:\n",
+
+    "        if 'CD105' in position_dir:\n",
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
-    "            if match.group(1) == 'MK':\n",
-    "                df_name = '_'.join([df_name_prefix, 'MKs'])\n",
-    "            elif match.group(1) == 'Adipo':\n",
-    "                df_name = '_'.join([df_name_prefix, 'Adipos'])\n",
-    "            elif match.group(1) == 'Cxcl12':\n",
-    "                df_name = '_'.join([df_name_prefix, 'MSCs'])\n",
-    "            elif match.group(1) == 'CD105':\n",
-    "                df_name = '_'.join([df_name_prefix, 'Sinusoids'])\n",
-    "            else:\n",
-    "                df_name = '_'.join([df_name_prefix, match.group(1)])\n",
+    "            df_name = '_'.join([df_name_prefix, 'Sinusoids'])\n",
     "            print(df_name)\n",
-    "            \n",
+    "        elif 'Cxcl12' in position_dir:\n",
+    "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            df_name = '_'.join([df_name_prefix, 'MSCs'])\n",
+    "            print(df_name)\n",
     "        elif 'HSC' in position_dir:\n",
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            df_name = '_'.join([df_name_prefix, 'HSCs'])\n",
@@ -247,6 +242,21 @@
     "        elif 'GFAP' in position_dir:\n",
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            df_name = '_'.join([df_name_prefix, 'Neurons'])\n",
+    "            print(df_name)\n",
+    "        elif 'MK' in position_dir:\n",
+    "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            df_name = '_'.join([df_name_prefix, 'MKs'])\n",
+    "            print(df_name)\n",
+    "        elif 'Adipo' in position_dir:\n",
+    "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            df_name = '_'.join([df_name_prefix, 'Adipos'])\n",
+    "            print(df_name)\n",
+    "        elif 'Neurons' in position_dir:\n",
+    "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            df_name = '_'.join([df_name_prefix, 'Neurons'])\n",
+    "            print(df_name)\n",
+    "        else:\n",
+    "            df_name = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            print(df_name)\n",
     "        \n",
     "        # Store the processed DataFrame in the output dictionary\n",
