--- a/SPDM_5FU.ipynb
+++ b/SPDM_5FU.ipynb
@@ -17,11 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
@@ -59,11 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "os.getcwd()\n",
@@ -108,11 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "\n",
@@ -178,11 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Read the position files and create the DataFrames with columns 'Position.x', 'Position.y', 'Position.z'\n",
@@ -217,12 +201,11 @@
     "        \n",
     "        # Extract a key name for the output dictionary from the file path\n",
     "        match = re.search(pattern, position_dir)\n",
-
     "        if 'CD105' in position_dir:\n",
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            df_name = '_'.join([df_name_prefix, 'Sinusoids'])\n",
     "            print(df_name)\n",
-    "        elif 'Cxcl12' in position_dir:\n",
+    "        elif 'Cxcl12' in position_dir and 'acatCxcl12' not in position_dir:\n",
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            df_name = '_'.join([df_name_prefix, 'MSCs'])\n",
     "            print(df_name)\n",
@@ -288,11 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get the GFP images of the bones\n",
@@ -408,11 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Access individual lists for each condition\n",
@@ -448,11 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# From the positions_ss, positions_d5, positions_d10, positions_d15, positions_d30\n",
@@ -489,11 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# delete bone_ss, bone_d5, bone_d10, bone_d15, bone_d30 to free up memory\n",
@@ -527,7 +494,7 @@
     "ref_bone_inner = image_to_df(ref_bone_inner)\n",
     "\n",
     "# Flip the y-axis to match the image coordinates\n",
-    "y_max = np.max((ref_bone_outer['Position.Y'].max(), ref_bone_inner['Position.Y'].max()))\n",
+    "y_max = np.max(ref_bone_inner['Position.Y'].max())\n",
     "# ref_bone_outer['Position.Y'] = y_max - ref_bone_outer['Position.Y']\n",
     "ref_bone_inner['Position.Y'] = y_max - ref_bone_inner['Position.Y']\n",
     "\n",
@@ -1385,7 +1352,7 @@
     "        # Convert the transformed positions to a DataFrame and include the source column\n",
     "        transformed_df = pd.DataFrame(transformed_bone_positions, columns=['Position.X', 'Position.Y'])\n",
     "        transformed_df['source'] = source_column  # Add the source column back\n",
-    "\n",
+    "        transformed_df['dataset'] = dataset_name  # Add the dataset name column\n",
     "        # Store the transformed DataFrame in the result dictionary\n",
     "        transformed_dict[dataset_name] = transformed_df\n",
     "\n",
@@ -2573,8 +2540,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "imgcap",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
