add the missing part for position files

--- a/SPDM_5FU.ipynb
+++ b/SPDM_5FU.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
     "from PIL import Image\n",
     "\n",
     "# Spatial Analysis and Geometry\n",
-    "from scipy.spatial import cdist, KDTree, ConvexHull\n",
+    "from scipy.spatial import KDTree, ConvexHull\n",
     "from scipy.spatial.distance import pdist, squareform, jensenshannon\n",
     "from shapely.geometry import Polygon, box\n",
     "import geopandas as gpd\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,8 @@
     "# Increase the maximum image size limit\n",
     "Image.MAX_IMAGE_PIXELS = None\n",
     "data_dir_5fu = 'data_metabone_5fu'\n",
-    "save_dir = '/'\n",
+    "save_dir = 'results_metabone_5fu'\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
     "\n",
     "mk_color_map = {\n",
     "    'MKs': \"#FF00FF\",  # Magenta \n",
@@ -113,7 +114,7 @@
     "    'd10': '#4B0082', # Indigo\n",
     "    'd15': '#20B2AA', # Light Sea Green\n",
     "    'd30': '#FFD700',  # Gold\n",
-    "    # 'd15_GW': '#8A2BE2',  # Blue Violet\n",
+    "    'd60': '#8A2BE2',  # Blue Violet\n",
     "    'd15_Detex': '#008080'  # Teal '#FF4500'  # Orange Red '#808080'  # Grey \n",
     "}\n",
     "\n",
@@ -148,19 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "# Define a function to filter and get the Position.csv files by condition\n",
+    "# TODO: adjust code so it can get the files by the number of the subdirectory automatically\n",
     "def get_position_files_by_conditions():\n",
     "    # Lists to store Position.csv files for each condition\n",
     "    position_files_d5 = []\n",
     "    position_files_d10 = []\n",
     "    position_files_d15 = []\n",
     "    position_files_d30 = []\n",
+    "    position_files_d60 = []\n",
     "    position_files_ss = []\n",
     "    \n",
     "    # Find all directories in data_dir_5fu, excluding .ims files\n",
@@ -187,6 +188,8 @@
     "                    position_files_d15.append(position_file[0])\n",
     "                elif 'd30' in data_dir:\n",
     "                    position_files_d30.append(position_file[0])\n",
+    "                elif 'd60' in data_dir:\n",
+    "                    position_files_d60.append(position_file[0])\n",
     "                else:\n",
     "                    # Files that don't contain 'd5', 'd10', 'd15', or 'd30' are classified as \"ss\"\n",
     "                    position_files_ss.append(position_file[0])\n",
@@ -197,6 +200,7 @@
     "        'd10': position_files_d10,\n",
     "        'd15': position_files_d15,\n",
     "        'd30': position_files_d30,\n",
+    "        'd60': position_files_d60,\n",
     "        'ss': position_files_ss\n",
     "    }\n",
     "\n",
@@ -209,14 +213,156 @@
     "position_dirs_d10 = position_files_by_conditions['d10']\n",
     "position_dirs_d15 = position_files_by_conditions['d15']\n",
     "position_dirs_d30 = position_files_by_conditions['d30'] \n",
+    "position_dirs_d60 = position_files_by_conditions['d60']\n",
     "position_dirs_ss = position_files_by_conditions['ss']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210518KK_st10_HSCs\n",
+      "200901KK_st1_HSCs\n",
+      "201002KK_st5_MSCs\n",
+      "200901KK_st3_RDs\n",
+      "201002KK_st5_Bones\n",
+      "200901KK_st1_Neurons\n",
+      "200901KK_st3_HSCs\n",
+      "210518KK_st10_Arteries\n",
+      "210518KKiJHa_st11_RDs\n",
+      "201002KK_st5_RDs\n",
+      "200901KK_st2_RDs\n",
+      "201002KK_st5_Sinusoids\n",
+      "200901KK_st1_MKs\n",
+      "210518KK_st12_RDs\n",
+      "200901KK_st2_MKs\n",
+      "200901KK_st2_Neurons\n",
+      "200901KK_st2_Adipos\n",
+      "200901KK_st2_HSCs\n",
+      "210518KK_st1_RDs\n",
+      "210518KKiJHa_st11_HSCs\n",
+      "210518KK_st12_HSCs\n",
+      "200901KK_st1_RDs\n",
+      "200728KK_st2_HSCs\n",
+      "201002KK_st5_HSCs\n",
+      "210518KK_st1_HSCs\n",
+      "210518KK_st10_RDs\n",
+      "200728KK_st2_RDs\n",
+      "200901KK_st1_Adipos\n",
+      "200110KK_st12_HSCs\n",
+      "200110KK_st12_RDs\n",
+      "200117KKiaJHa_st2_RDs\n",
+      "200117KK_st3_HSCs\n",
+      "200117KK_st5_RDs\n",
+      "191202KK_st4_HSCs\n",
+      "200117KK_st6_RDs\n",
+      "200117KK_st6_MSCs\n",
+      "200117KK_st3_RDs\n",
+      "200117KK_st6_Bones\n",
+      "200110KK_st10_Arteries\n",
+      "200117KK_st3_MKs\n",
+      "200117KK_st4_RDs\n",
+      "200117KK_st5_HSCs\n",
+      "191202KK_st4_RDs\n",
+      "200117KK_st1_RDs\n",
+      "200117KK_st3_Neurons\n",
+      "200117KK_st6_Sinusoids\n",
+      "200117KK_st4_HSCs\n",
+      "200117KKiaJHa_st2_HSCs\n",
+      "200117KK_st6_HSCs\n",
+      "200117KK_st3_Adipos\n",
+      "200117KK_st1_HSCs\n",
+      "200110KK_st3_RDs\n",
+      "191202KK_st3_HSCs\n",
+      "200110KK_st3_HSCs\n",
+      "200110KK_st1_RDs\n",
+      "191202KK_st1_HSCs\n",
+      "191202KK_st2_Neurons\n",
+      "191202KK_st2_HSCs\n",
+      "200110KK_st2_RDs\n",
+      "200110KK_st2_HSCs\n",
+      "240617JH_st3_MKs\n",
+      "200110KK_st4_HSCs\n",
+      "200205KK_st1_HSCs\n",
+      "191202KK_st3_RDs\n",
+      "200205KK_st1_Bones\n",
+      "191202KK_st5_RDs\n",
+      "200110KK_st4_RDs\n",
+      "200110KK_st1_HSCs\n",
+      "191202KK_st1_RDs\n",
+      "200110KK_st3_Sinusoids\n",
+      "240617JH_st3_Adipos\n",
+      "200205KK_st1_RDs\n",
+      "191202KK_st2_RDs\n",
+      "191202KK_st5_HSCs\n",
+      "200110KK_st8_Arteries\n",
+      "200110KK_st3_MSCs\n",
+      "240819JH_st2_Neurons\n",
+      "200817KK_st5_HSCs\n",
+      "200908KK_st5_RDs\n",
+      "201002KK_st7_RDs\n",
+      "200908KK_st1_RDs\n",
+      "240819JH_st2_Adipos\n",
+      "240819JH_st2_MKs\n",
+      "201020KK_st1_HSCs\n",
+      "201020KK_st2_RDs\n",
+      "200817KK_st5_RDs\n",
+      "200901KK_st5_HSCs\n",
+      "200908KK_st4_Bones\n",
+      "200728KK_st3_RDs\n",
+      "200908KK_st4_MSCs\n",
+      "240819JH_st2_HSCs\n",
+      "200908KK_st5_HSCs\n",
+      "210108KK_st10_Arteries\n",
+      "240819JH_st2_RDs\n",
+      "200728KK_st3_HSCs\n",
+      "201002KK_st7_HSCs\n",
+      "200908KK_st1_HSCs\n",
+      "200908KK_st4_Sinusoids\n",
+      "201020KK_st2_HSCs\n",
+      "201020KK_st1_RDs\n",
+      "200901KK_st5_RDs\n",
+      "200817KK_st6_RDs\n",
+      "201103KK_st5_MSCs\n",
+      "200901KK_st7_HSCs\n",
+      "201209KK_st6_HSCs\n",
+      "201209KK_st6_RDs\n",
+      "201020KK_st5_HSCs\n",
+      "201103KKI_st4_RDs\n",
+      "201103KK_st2_RDs\n",
+      "200817KK_st6_HSCs\n",
+      "200901KK_st7_RDs\n",
+      "201103KK_st5_Bones\n",
+      "201209KK_st7_HSCs\n",
+      "201103KK_st2_HSCs\n",
+      "200908KK_st2_RDs\n",
+      "201020KK_st5_RDs\n",
+      "200817KK_st6_Adipos\n",
+      "201103KKI_st4_HSCs\n",
+      "201103KK_st5_Sinusoids\n",
+      "240926JH_st2_Neurons\n",
+      "201103KK_st5_HSCs\n",
+      "201103KK_st5_RDs\n",
+      "200817KK_st6_MKs\n",
+      "201209KK_st7_Arteries\n",
+      "201209KK_st7_RDs\n",
+      "200908KK_st2_HSCs\n",
+      "240129JH_st8_Adipos\n",
+      "240129JH_st9_Sinusoids\n",
+      "240129JH_st8_HSCs\n",
+      "240129JH_st8_Bones\n",
+      "240129JH_st8_Neurons\n",
+      "240129JH_st8_RDs\n",
+      "240129JH_st8_MKs\n",
+      "240129JH_st8_Arteries\n"
+     ]
+    }
+   ],
    "source": [
     "# Read the position files and create the DataFrames with columns 'Position.x', 'Position.y', 'Position.z'\n",
     "# Regular expression to capture the word that starts with 'm' and extract the part after 'm'\n",
@@ -254,7 +400,15 @@
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            df_name = '_'.join([df_name_prefix, 'Sinusoids'])\n",
     "            print(df_name)\n",
+    "        elif 'Sinusoids' in position_dir:\n",
+    "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            df_name = '_'.join([df_name_prefix, 'Sinusoids'])\n",
+    "            print(df_name)\n",
     "        elif 'Cxcl12' in position_dir and 'acatCxcl12' not in position_dir:\n",
+    "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            df_name = '_'.join([df_name_prefix, 'MSCs'])\n",
+    "            print(df_name)\n",
+    "        elif 'MSCs' in position_dir and 'acatCxcl12' not in position_dir:\n",
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            df_name = '_'.join([df_name_prefix, 'MSCs'])\n",
     "            print(df_name)\n",
@@ -268,6 +422,10 @@
     "            df_name = '_'.join([df_name_prefix, 'RDs'])\n",
     "            print(df_name)\n",
     "        elif 'Sca1' in position_dir:\n",
+    "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            df_name = '_'.join([df_name_prefix, 'Arteries'])\n",
+    "            print(df_name)\n",
+    "        elif 'Arteries' in position_dir:\n",
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            df_name = '_'.join([df_name_prefix, 'Arteries'])\n",
     "            print(df_name)\n",
@@ -287,8 +445,14 @@
     "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
     "            df_name = '_'.join([df_name_prefix, 'Neurons'])\n",
     "            print(df_name)\n",
+    "        elif 'Bone' or 'bone' in position_dir:\n",
+    "            df_name_prefix = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            df_name = '_'.join([df_name_prefix, 'Bones'])\n",
+    "            print(df_name)\n",
     "        else:\n",
     "            df_name = '_'.join(position_dir.split('/')[-1].split(' ')[:2])\n",
+    "            print('speical case')\n",
+    "            print(position_dir)\n",
     "            print(df_name)\n",
     "        \n",
     "        # Store the processed DataFrame in the output dictionary\n",
@@ -307,7 +471,8 @@
     "positions_d5 = process_position_dirs(position_dirs_d5, scale_factors)\n",
     "positions_d10 = process_position_dirs(position_dirs_d10, scale_factors)\n",
     "positions_d15 = process_position_dirs(position_dirs_d15, scale_factors)\n",
-    "positions_d30 = process_position_dirs(position_dirs_d30, scale_factors)\n"
+    "positions_d30 = process_position_dirs(position_dirs_d30, scale_factors)\n",
+    "positions_d60 = process_position_dirs(position_dirs_d60, scale_factors)"
    ]
   },
   {
@@ -323,6 +488,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Get the GFP images of the bones\n",
     "def get_ims_files_by_conditions():\n",
     "    # Lists to store .ims files for each condition\n",
@@ -330,6 +496,7 @@
     "    ims_files_d10 = []\n",
     "    ims_files_d15 = []\n",
     "    ims_files_d30 = []\n",
+    "    ims_files_d60 = []\n",
     "    ims_files_ss = []\n",
     "    \n",
     "    # Find all directories in data_dir_5fu, excluding .ims files\n",
@@ -346,6 +513,8 @@
     "            ims_files_d15.extend(sub_dirs)\n",
     "        elif 'd30' in data_dir:\n",
     "            ims_files_d30.extend(sub_dirs)\n",
+    "        elif 'd60' in data_dir:\n",
+    "            ims_files_d60.extend(sub_dirs)\n",
     "        else:\n",
     "            # Files that don't contain 'd5', 'd10', 'd15', or 'd30' are classified as \"ss\"\n",
     "            ims_files_ss.extend(sub_dirs)\n",
@@ -356,6 +525,7 @@
     "        'd10': ims_files_d10,\n",
     "        'd15': ims_files_d15,\n",
     "        'd30': ims_files_d30,\n",
+    "        'd60': ims_files_d60,\n",
     "        'ss': ims_files_ss\n",
     "    }\n",
     "\n",
@@ -437,7 +607,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n# Access individual lists for each condition\\nims_files_by_conditions = get_ims_files_by_conditions()\\nbone_ss_ims = ims_files_by_conditions['ss']\\nbone_d5_ims = ims_files_by_conditions['d5']\\nbone_d10_ims = ims_files_by_conditions['d10']\\nbone_d15_ims = ims_files_by_conditions['d15']\\nbone_d30_ims = ims_files_by_conditions['d30']\\nbone_d60_ims = ims_files_by_conditions['d60']\\n\\n# Filter the ims files, keep the one with shorter name\\nfiltered_bone_ss_ims = filter_ims_files(bone_ss_ims)\\nfiltered_bone_d5_ims = filter_ims_files(bone_d5_ims)\\nfiltered_bone_d10_ims = filter_ims_files(bone_d10_ims)\\nfiltered_bone_d15_ims = filter_ims_files(bone_d15_ims)\\nfiltered_bone_d30_ims = filter_ims_files(bone_d30_ims)\\nfiltered_bone_d60_ims = filter_ims_files(bone_d60_ims)\\n\\n# Process images for each condition\\nbone_ss = process_bone_images(filtered_bone_ss_ims)\\nbone_d5 = process_bone_images(filtered_bone_d5_ims)\\nbone_d10 = process_bone_images(filtered_bone_d10_ims)\\nbone_d15 = process_bone_images(filtered_bone_d15_ims)\\nbone_d30 = process_bone_images(filtered_bone_d30_ims)\\nbone_d60 = process_bone_images(filtered_bone_d60_ims)\\n\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Access individual lists for each condition\n",
     "ims_files_by_conditions = get_ims_files_by_conditions()\n",
@@ -446,6 +627,7 @@
     "bone_d10_ims = ims_files_by_conditions['d10']\n",
     "bone_d15_ims = ims_files_by_conditions['d15']\n",
     "bone_d30_ims = ims_files_by_conditions['d30']\n",
+    "bone_d60_ims = ims_files_by_conditions['d60']\n",
     "\n",
     "# Filter the ims files, keep the one with shorter name\n",
     "filtered_bone_ss_ims = filter_ims_files(bone_ss_ims)\n",
@@ -453,13 +635,15 @@
     "filtered_bone_d10_ims = filter_ims_files(bone_d10_ims)\n",
     "filtered_bone_d15_ims = filter_ims_files(bone_d15_ims)\n",
     "filtered_bone_d30_ims = filter_ims_files(bone_d30_ims)\n",
+    "filtered_bone_d60_ims = filter_ims_files(bone_d60_ims)\n",
     "\n",
     "# Process images for each condition\n",
     "bone_ss = process_bone_images(filtered_bone_ss_ims)\n",
     "bone_d5 = process_bone_images(filtered_bone_d5_ims)\n",
     "bone_d10 = process_bone_images(filtered_bone_d10_ims)\n",
     "bone_d15 = process_bone_images(filtered_bone_d15_ims)\n",
-    "bone_d30 = process_bone_images(filtered_bone_d30_ims)"
+    "bone_d30 = process_bone_images(filtered_bone_d30_ims)\n",
+    "bone_d60 = process_bone_images(filtered_bone_d60_ims)\n"
    ]
   },
   {
@@ -471,9 +655,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'positions_d30' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 29\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m positions_df_dict\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# positions_ss_dfs = positions_concat(positions_ss, bone_ss)\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# positions_d5_dfs = positions_concat(positions_d5, bone_d5)\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# positions_d10_dfs = positions_concat(positions_d10, bone_d10)\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;66;03m# positions_d15_dfs = positions_concat(positions_d15, bone_d15)\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m positions_d30_dfs \u001b[38;5;241m=\u001b[39m positions_concat(\u001b[43mpositions_d30\u001b[49m, bone_d30)\n\u001b[1;32m     30\u001b[0m positions_d60_dfs \u001b[38;5;241m=\u001b[39m positions_concat(positions_d60, bone_d60)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'positions_d30' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# From the positions_ss, positions_d5, positions_d10, positions_d15, positions_d30\n",
     "def positions_concat(positions_dict, bone_dict):\n",
@@ -499,11 +695,12 @@
     "        positions_df_dict[dataset] = df\n",
     "    return positions_df_dict\n",
     "\n",
-    "positions_ss_dfs = positions_concat(positions_ss, bone_ss)\n",
-    "positions_d5_dfs = positions_concat(positions_d5, bone_d5)\n",
-    "positions_d10_dfs = positions_concat(positions_d10, bone_d10)\n",
-    "positions_d15_dfs = positions_concat(positions_d15, bone_d15)\n",
-    "positions_d30_dfs = positions_concat(positions_d30, bone_d30)"
+    "# positions_ss_dfs = positions_concat(positions_ss, bone_ss)\n",
+    "# positions_d5_dfs = positions_concat(positions_d5, bone_d5)\n",
+    "# positions_d10_dfs = positions_concat(positions_d10, bone_d10)\n",
+    "# positions_d15_dfs = positions_concat(positions_d15, bone_d15)\n",
+    "positions_d30_dfs = positions_concat(positions_d30, bone_d30)\n",
+    "positions_d60_dfs = positions_concat(positions_d60, bone_d60)"
    ]
   },
   {
@@ -513,7 +710,7 @@
    "outputs": [],
    "source": [
     "# delete bone_ss, bone_d5, bone_d10, bone_d15, bone_d30 to free up memory\n",
-    "del bone_ss, bone_d5, bone_d10, bone_d15, bone_d30"
+    "del bone_ss, bone_d5, bone_d10, bone_d15, bone_d30, bone_d60"
    ]
   },
   {
@@ -603,8 +800,9 @@
    "outputs": [],
    "source": [
     "# Visualize the x, y for each df \n",
-    "for test_df in [positions_ss_dfs, positions_d5_dfs, positions_d10_dfs, positions_d15_dfs, positions_d30_dfs]:\n",
-    "    fig, axs = plt.subplots(len(test_df.keys()), 7, figsize=(12*len(test_df.keys()), 36))\n",
+    "# for test_df in [positions_ss_dfs, positions_d5_dfs, positions_d10_dfs, positions_d15_dfs, positions_d30_dfs]:\n",
+    "for test_df in[positions_d60_dfs]\n",
+    "    fig, axs = plt.subplots(len(test_df.keys()), 1, figsize=(12*len(test_df.keys()), 36))\n",
     "\n",
     "    # Visualize the steady state positions row by key and the columns are source\n",
     "    for i, key in enumerate(test_df.keys()):\n",
