final check of the code and adjust the code structure

--- a/SPDM_5FU.ipynb
+++ b/SPDM_5FU.ipynb
@@ -2317,9 +2317,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "# Combined the bone outline and the inner bone for the KDE calculation\n",
-    "# This step is import to have a more accurate bone KDE\n",
-    "# If we do we also need to update the code where we get the KDE values as the features for the clustering\n",
     "xi, yi, _ = common_grid_overlap_bones\n",
     "# Masked the values outside the bone outline\n",
     "mask = points_in_polygon(xi.flatten(), yi.flatten(), common_outline).reshape(xi.shape)\n",
@@ -2350,11 +2349,57 @@
     "            \n",
     "            # Optionally normalize the combined result again\n",
     "            combined_inside_mask = combined_normed_z[mask]\n",
-    "            norm_combined = Normalize(vmin=combined_inside_mask.min(), vmax=combined_inside_mask.max())\n",
+    "            norm_combined = Normalize(vmin=combined_inside_mask.min(), \n",
+    "            vmax=combined_inside_mask.max())\n",
     "            normed_combined_final = norm_combined(combined_normed_z)\n",
     "            normed_combined_final[~mask] = 0\n",
     "            \n",
-    "            kde_results[source] = normed_combined_final  # Update with the combined result"
+    "            kde_results[source] = normed_combined_final  # Update with the combined result\n",
+    "'''\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xi, yi, _ = common_grid_overlap_bones\n",
+    "# Masked the values outside the bone outline\n",
+    "mask = points_in_polygon(xi.flatten(), yi.flatten(), common_outline).reshape(xi.shape)\n",
+    "\n",
+    "for kde_results in [kde_results_ss_overlap_bones, kde_results_d5_overlap_bones, kde_results_d10_overlap_bones, kde_results_d15_overlap_bones, kde_results_d30_overlap_bones, kde_results_d15_overlap_bones_Detex]:\n",
+    "    for source in kde_results.keys():\n",
+    "        if source == 'Bones':\n",
+    "            zi = kde_results[source]\n",
+    "            zi[~mask] = 0\n",
+    "        \n",
+    "            # Normalize the bone KDE\n",
+    "            zi_inside_mask = zi[mask]\n",
+    "            norm_bone = Normalize(vmin=zi_inside_mask.min(), vmax=zi_inside_mask.max())\n",
+    "            normed_z_bone = norm_bone(zi)\n",
+    "            normed_z_bone[~mask] = 0\n",
+    "            \n",
+    "            # Normalize the bone outline KDE\n",
+    "            zi_bone_outline = kde_results_bone_outline['Bones_Outline']\n",
+    "            zi_bone_outline[~mask] = 0\n",
+    "            zi_bone_outline_inside_mask = zi_bone_outline[mask]\n",
+    "            # norm_bone_outline = Normalize(vmin=zi_bone_outline_inside_mask.min(), vmax=zi_bone_outline_inside_mask.max())\n",
+    "            normed_z_bone_outline = norm_bone(zi_bone_outline)\n",
+    "            normed_z_bone_outline[~mask] = 0\n",
+    "            \n",
+    "            # Combine the normalized KDEs using the same weights\n",
+    "            combined_normed_z = normed_z_bone * 0.5 + normed_z_bone_outline * 0.5\n",
+    "            \n",
+    "            # Optionally normalize the combined result again\n",
+    "            combined_inside_mask = combined_normed_z[mask]\n",
+    "            norm_combined = Normalize(vmin=combined_inside_mask.min(), \n",
+    "            vmax=combined_inside_mask.max())\n",
+    "            normed_combined_final = norm_combined(combined_normed_z)\n",
+    "            normed_combined_final[~mask] = 0\n",
+    "            \n",
+    "            kde_results[source] = normed_combined_final  # Update with the combined result\n",
+    "\n"
    ]
   },
   {
